# Transmogrify

./: CMakeLists.txt  README.md
cmake/: readComponents.cmake
src/: CMakeLists.txt  transmogclient.c
